@@ -1,6 +1,9 @@
 import logging
 import pathlib
 import datetime
+import platform
+import psycopg2
+import subprocess
 import configparser
 from logging.handlers import RotatingFileHandler
 from PyQt5 import QtGui, QtWidgets
@@ -53,6 +56,35 @@ def create_logging_handlers(config_dict, filename, default_path):
     logging.getLogger('').addHandler(console)
     if using_default_path:
         logging.error('gui - logging system - path from ini file not found, using default path')
+
+
+def check_postgresql_server():
+    installed = False
+    database = False
+    tables = False
+
+    if platform.system() == 'Linux':
+        res = subprocess.run(['which', '-s', 'psql'])
+        if res.returncode == 0:
+            installed = True
+    else:
+        installed = True
+
+    if installed:
+        try:
+            connector = psycopg2.connect(user='weather_station', password='31weather64', host='127.0.0.1',
+                                         database='weather_station_db', connect_timeout=1)
+            database = True
+            cursor = connector.cursor()
+            cursor.execute("""SELECT table_name FROM information_schema.tables WHERE table_schema='public'""")
+            if cursor.fetchall():
+                tables = True
+            cursor.close()
+            connector.close()
+        except psycopg2.OperationalError:
+            pass
+
+    return installed, database, tables
 
 
 def clear_layout(layout):
